# component-template

./: CMakeLists.txt  ReadMe.md  vcpkg.json
.github/workflows/: main.yaml
cmake/: project-config.cmake
dv/: CMakeLists.txt  Module.cpp
